[package]
name = "todo_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["tokio", "debug", "highlighter"]}
iced_aw = { version = "0.9.3", default_features = false, features = ["menu", "quad", "icons"] }
tokio = { version = "1.32", features = ["full"] }
rfd = "0.12"
